--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 env:
   IMAGE_NAME: ${{ github.repository }}
@@ -11,7 +12,7 @@ env:
 
 jobs:
   build:
-  
+
     runs-on: ubuntu-latest
     permissions:
       packages: write
